DafnyParser.py
# Generated from Dafny.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class DafnyParser ( Parser ):

    grammarFileName = "Dafny.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'method'", "'Main'", "'('", "')'", "'returns'", 
                     "'return'", "'int'", "'char'", "'real'", "'string'", 
                     "'bool'", "'array'", "'seq'", "'set'", "'multiset'", 
                     "'map'", "'Keys'", "'Values'", "'Length'", "'var'", 
                     "'{'", "'}'", "'='", "'|'", "'<'", "'>'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'&&'", "<INVALID>", "'-'", 
                     "'+'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'in'", "<INVALID>", "<INVALID>", "'*'", "'/'", "'%'", 
                     "<INVALID>", "'['", "']'", "','", "':'", "'if'", "'then'", 
                     "'else'", "';'", "'0x'", "<INVALID>", "'new'", "'print'" ]

    symbolicNames = [ "<INVALID>", "METHOD", "MAIN", "LBRACKET", "RBRACKET", 
                      "RETURNS", "RETURN", "INT", "CHAR", "REAL", "STRING", 
                      "BOOL", "ARRAY", "SEQ", "SET", "MULTISET", "MAP", 
                      "KEYS", "VALUES", "LENGTH", "VAR", "LCURLY", "RCURLY", 
                      "EQUAL", "BAR", "LANGLE", "RANGLE", "IFF", "IMPLIES", 
                      "REVERSE_IMPLIES", "CONJUNCT", "DISJUNCT", "MINUS", 
                      "PLUS", "EQUALITY", "DISEQUALITY", "LTE", "GTE", "IN", 
                      "NOT_IN", "DISJOINT", "MULT", "DIV", "MOD", "NOT", 
                      "LSQUARE", "RSQUARE", "COMMA", "COLON", "IF", "THEN", 
                      "ELSE", "SEMICOLON", "HEX", "SPREAD", "NEW", "PRINT", 
                      "BOOL_LITERAL", "PARAM_NAME", "VARIABLE_NAME", "RETURN_NAME", 
                      "METHOD_NAME", "INT_LITERAL", "REAL_LITERAL", "DOT", 
                      "CHAR_LITERAL", "STRING_LITERAL", "WS", "ERROR" ]

    RULE_translation_unit = 0
    RULE_program = 1
    RULE_main = 2
    RULE_method = 3
    RULE_dafnyType = 4
    RULE_paramList = 5
    RULE_returnList = 6
    RULE_paramArg = 7
    RULE_returnArg = 8
    RULE_typeList = 9
    RULE_baseType = 10
    RULE_collectionType = 11
    RULE_stat = 12
    RULE_printStat = 13
    RULE_returnStat = 14
    RULE_ifElseStat = 15
    RULE_assignStat = 16
    RULE_variableList = 17
    RULE_variableArg = 18
    RULE_exprList = 19
    RULE_expr = 20
    RULE_literal = 21
    RULE_intLiteral = 22
    RULE_charLiteral = 23
    RULE_boolLiteral = 24
    RULE_realLiteral = 25
    RULE_arrayLiteral = 26
    RULE_setLiteral = 27
    RULE_seqLiteral = 28
    RULE_multisetLiteral = 29
    RULE_stringLiteral = 30
    RULE_mapLiteral = 31
    RULE_tupleLiteral = 32
    RULE_binaryOperator = 33
    RULE_op1 = 34
    RULE_op2 = 35
    RULE_op3 = 36
    RULE_op4 = 37
    RULE_op6 = 38
    RULE_op7 = 39
    RULE_unaryOperator = 40
    RULE_callExpr = 41
    RULE_ifElseExpr = 42
    RULE_indexExpr = 43
    RULE_update = 44
    RULE_subsequence = 45
    RULE_variable = 46

    ruleNames =  [ "translation_unit", "program", "main", "method", "dafnyType", 
                   "paramList", "returnList", "paramArg", "returnArg", "typeList", 
                   "baseType", "collectionType", "stat", "printStat", "returnStat", 
                   "ifElseStat", "assignStat", "variableList", "variableArg", 
                   "exprList", "expr", "literal", "intLiteral", "charLiteral", 
                   "boolLiteral", "realLiteral", "arrayLiteral", "setLiteral", 
                   "seqLiteral", "multisetLiteral", "stringLiteral", "mapLiteral", 
                   "tupleLiteral", "binaryOperator", "op1", "op2", "op3", 
                   "op4", "op6", "op7", "unaryOperator", "callExpr", "ifElseExpr", 
                   "indexExpr", "update", "subsequence", "variable" ]

    EOF = Token.EOF
    METHOD=1
    MAIN=2
    LBRACKET=3
    RBRACKET=4
    RETURNS=5
    RETURN=6
    INT=7
    CHAR=8
    REAL=9
    STRING=10
    BOOL=11
    ARRAY=12
    SEQ=13
    SET=14
    MULTISET=15
    MAP=16
    KEYS=17
    VALUES=18
    LENGTH=19
    VAR=20
    LCURLY=21
    RCURLY=22
    EQUAL=23
    BAR=24
    LANGLE=25
    RANGLE=26
    IFF=27
    IMPLIES=28
    REVERSE_IMPLIES=29
    CONJUNCT=30
    DISJUNCT=31
    MINUS=32
    PLUS=33
    EQUALITY=34
    DISEQUALITY=35
    LTE=36
    GTE=37
    IN=38
    NOT_IN=39
    DISJOINT=40
    MULT=41
    DIV=42
    MOD=43
    NOT=44
    LSQUARE=45
    RSQUARE=46
    COMMA=47
    COLON=48
    IF=49
    THEN=50
    ELSE=51
    SEMICOLON=52
    HEX=53
    SPREAD=54
    NEW=55
    PRINT=56
    BOOL_LITERAL=57
    PARAM_NAME=58
    VARIABLE_NAME=59
    RETURN_NAME=60
    METHOD_NAME=61
    INT_LITERAL=62
    REAL_LITERAL=63
    DOT=64
    CHAR_LITERAL=65
    STRING_LITERAL=66
    WS=67
    ERROR=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Translation_unitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(DafnyParser.ProgramContext,0)


        def getRuleIndex(self):
            return DafnyParser.RULE_translation_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTranslation_unit" ):
                listener.enterTranslation_unit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTranslation_unit" ):
                listener.exitTranslation_unit(self)




    def translation_unit(self):

        localctx = DafnyParser.Translation_unitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_translation_unit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.program()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main(self):
            return self.getTypedRuleContext(DafnyParser.MainContext,0)


        def method(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DafnyParser.MethodContext)
            else:
                return self.getTypedRuleContext(DafnyParser.MethodContext,i)


        def getRuleIndex(self):
            return DafnyParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = DafnyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 96
                    self.method() 
                self.state = 101
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 102
            self.main()
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DafnyParser.METHOD:
                self.state = 103
                self.method()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def METHOD(self):
            return self.getToken(DafnyParser.METHOD, 0)

        def MAIN(self):
            return self.getToken(DafnyParser.MAIN, 0)

        def LBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(DafnyParser.LBRACKET)
            else:
                return self.getToken(DafnyParser.LBRACKET, i)

        def RBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(DafnyParser.RBRACKET)
            else:
                return self.getToken(DafnyParser.RBRACKET, i)

        def RETURNS(self):
            return self.getToken(DafnyParser.RETURNS, 0)

        def LCURLY(self):
            return self.getToken(DafnyParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(DafnyParser.RCURLY, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DafnyParser.StatContext)
            else:
                return self.getTypedRuleContext(DafnyParser.StatContext,i)


        def getRuleIndex(self):
            return DafnyParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)




    def main(self):

        localctx = DafnyParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_main)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(DafnyParser.METHOD)
            self.state = 110
            self.match(DafnyParser.MAIN)
            self.state = 111
            self.match(DafnyParser.LBRACKET)
            self.state = 112
            self.match(DafnyParser.RBRACKET)
            self.state = 113
            self.match(DafnyParser.RETURNS)
            self.state = 114
            self.match(DafnyParser.LBRACKET)
            self.state = 115
            self.match(DafnyParser.RBRACKET)
            self.state = 116
            self.match(DafnyParser.LCURLY)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DafnyParser.RETURN) | (1 << DafnyParser.VAR) | (1 << DafnyParser.IF) | (1 << DafnyParser.PRINT) | (1 << DafnyParser.PARAM_NAME) | (1 << DafnyParser.VARIABLE_NAME))) != 0):
                self.state = 117
                self.stat()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self.match(DafnyParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MethodContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def METHOD(self):
            return self.getToken(DafnyParser.METHOD, 0)

        def METHOD_NAME(self):
            return self.getToken(DafnyParser.METHOD_NAME, 0)

        def LBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(DafnyParser.LBRACKET)
            else:
                return self.getToken(DafnyParser.LBRACKET, i)

        def RBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(DafnyParser.RBRACKET)
            else:
                return self.getToken(DafnyParser.RBRACKET, i)

        def LCURLY(self):
            return self.getToken(DafnyParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(DafnyParser.RCURLY, 0)

        def paramList(self):
            return self.getTypedRuleContext(DafnyParser.ParamListContext,0)


        def RETURNS(self):
            return self.getToken(DafnyParser.RETURNS, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DafnyParser.StatContext)
            else:
                return self.getTypedRuleContext(DafnyParser.StatContext,i)


        def returnList(self):
            return self.getTypedRuleContext(DafnyParser.ReturnListContext,0)


        def getRuleIndex(self):
            return DafnyParser.RULE_method

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)




    def method(self):

        localctx = DafnyParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_method)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(DafnyParser.METHOD)
            self.state = 126
            self.match(DafnyParser.METHOD_NAME)
            self.state = 127
            self.match(DafnyParser.LBRACKET)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DafnyParser.PARAM_NAME:
                self.state = 128
                self.paramList()


            self.state = 131
            self.match(DafnyParser.RBRACKET)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DafnyParser.RETURNS:
                self.state = 132
                self.match(DafnyParser.RETURNS)
                self.state = 133
                self.match(DafnyParser.LBRACKET)
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DafnyParser.RETURN_NAME:
                    self.state = 134
                    self.returnList()


                self.state = 137
                self.match(DafnyParser.RBRACKET)


            self.state = 140
            self.match(DafnyParser.LCURLY)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DafnyParser.RETURN) | (1 << DafnyParser.VAR) | (1 << DafnyParser.IF) | (1 << DafnyParser.PRINT) | (1 << DafnyParser.PARAM_NAME) | (1 << DafnyParser.VARIABLE_NAME))) != 0):
                self.state = 141
                self.stat()
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 147
            self.match(DafnyParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DafnyTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def baseType(self):
            return self.getTypedRuleContext(DafnyParser.BaseTypeContext,0)


        def collectionType(self):
            return self.getTypedRuleContext(DafnyParser.CollectionTypeContext,0)


        def LANGLE(self):
            return self.getToken(DafnyParser.LANGLE, 0)

        def typeList(self):
            return self.getTypedRuleContext(DafnyParser.TypeListContext,0)


        def RANGLE(self):
            return self.getToken(DafnyParser.RANGLE, 0)

        def LBRACKET(self):
            return self.getToken(DafnyParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(DafnyParser.RBRACKET, 0)

        def getRuleIndex(self):
            return DafnyParser.RULE_dafnyType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDafnyType" ):
                listener.enterDafnyType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDafnyType" ):
                listener.exitDafnyType(self)




    def dafnyType(self):

        localctx = DafnyParser.DafnyTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dafnyType)
        self._la = 0 # Token type
        try:
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DafnyParser.INT, DafnyParser.CHAR, DafnyParser.REAL, DafnyParser.STRING, DafnyParser.BOOL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.baseType()
                pass
            elif token in [DafnyParser.ARRAY, DafnyParser.SEQ, DafnyParser.SET, DafnyParser.MULTISET, DafnyParser.MAP]:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.collectionType()
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DafnyParser.LANGLE:
                    self.state = 151
                    self.match(DafnyParser.LANGLE)
                    self.state = 152
                    self.typeList()
                    self.state = 153
                    self.match(DafnyParser.RANGLE)


                pass
            elif token in [DafnyParser.LBRACKET]:
                self.enterOuterAlt(localctx, 3)
                self.state = 157
                self.match(DafnyParser.LBRACKET)
                self.state = 158
                self.typeList()
                self.state = 159
                self.match(DafnyParser.RBRACKET)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramArg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DafnyParser.ParamArgContext)
            else:
                return self.getTypedRuleContext(DafnyParser.ParamArgContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DafnyParser.COMMA)
            else:
                return self.getToken(DafnyParser.COMMA, i)

        def getRuleIndex(self):
            return DafnyParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)




    def paramList(self):

        localctx = DafnyParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.paramArg()
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DafnyParser.COMMA:
                self.state = 164
                self.match(DafnyParser.COMMA)
                self.state = 165
                self.paramArg()
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturnListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnArg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DafnyParser.ReturnArgContext)
            else:
                return self.getTypedRuleContext(DafnyParser.ReturnArgContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DafnyParser.COMMA)
            else:
                return self.getToken(DafnyParser.COMMA, i)

        def getRuleIndex(self):
            return DafnyParser.RULE_returnList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnList" ):
                listener.enterReturnList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnList" ):
                listener.exitReturnList(self)




    def returnList(self):

        localctx = DafnyParser.ReturnListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_returnList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.returnArg()
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DafnyParser.COMMA:
                self.state = 172
                self.match(DafnyParser.COMMA)
                self.state = 173
                self.returnArg()
                self.state = 178
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAM_NAME(self):
            return self.getToken(DafnyParser.PARAM_NAME, 0)

        def COLON(self):
            return self.getToken(DafnyParser.COLON, 0)

        def dafnyType(self):
            return self.getTypedRuleContext(DafnyParser.DafnyTypeContext,0)


        def getRuleIndex(self):
            return DafnyParser.RULE_paramArg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamArg" ):
                listener.enterParamArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamArg" ):
                listener.exitParamArg(self)




    def paramArg(self):

        localctx = DafnyParser.ParamArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paramArg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(DafnyParser.PARAM_NAME)
            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DafnyParser.COLON:
                self.state = 180
                self.match(DafnyParser.COLON)
                self.state = 181
                self.dafnyType()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturnArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN_NAME(self):
            return self.getToken(DafnyParser.RETURN_NAME, 0)

        def COLON(self):
            return self.getToken(DafnyParser.COLON, 0)

        def dafnyType(self):
            return self.getTypedRuleContext(DafnyParser.DafnyTypeContext,0)


        def getRuleIndex(self):
            return DafnyParser.RULE_returnArg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnArg" ):
                listener.enterReturnArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnArg" ):
                listener.exitReturnArg(self)




    def returnArg(self):

        localctx = DafnyParser.ReturnArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnArg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(DafnyParser.RETURN_NAME)
            self.state = 187
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DafnyParser.COLON:
                self.state = 185
                self.match(DafnyParser.COLON)
                self.state = 186
                self.dafnyType()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dafnyType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DafnyParser.DafnyTypeContext)
            else:
                return self.getTypedRuleContext(DafnyParser.DafnyTypeContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DafnyParser.COMMA)
            else:
                return self.getToken(DafnyParser.COMMA, i)

        def getRuleIndex(self):
            return DafnyParser.RULE_typeList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeList" ):
                listener.enterTypeList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeList" ):
                listener.exitTypeList(self)




    def typeList(self):

        localctx = DafnyParser.TypeListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_typeList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.dafnyType()
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DafnyParser.COMMA:
                self.state = 190
                self.match(DafnyParser.COMMA)
                self.state = 191
                self.dafnyType()
                self.state = 196
                self._errHandler.sync(self)
                _la = self._input.LA(1)
